--- a/styles/header.css
+++ b/styles/header.css
@@ -24,11 +24,11 @@
     padding: 1em;
 }
 
-.lista-menu{
+.lista-menu {
     display: none;
     position: absolute;
     top: 100%;
-    display: 60vw;
+    width: 60vw;
 }
 
 .container__botao:checked ~.lista-menu{
