--- a/styles/contato.css
+++ b/styles/contato.css
@@ -38,3 +38,26 @@
     font-size: 16px;
     font-weight: 400;
 }
+
+@media screen and (min-width: 1024px){
+
+    .contato{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 2em 0 3em 0;
+    }
+
+    .contato__titulo{
+        font-size: 24px;
+    }
+
+    .contato__descrição{
+        margin-right: 4em;
+        width: 30%;
+    }
+
+    .contato__email{
+        width: 30%;
+    }
+}
