--- a/styles/banner.css
+++ b/styles/banner.css
@@ -47,4 +47,21 @@
     .banner__pesquisa::placeholder{
         background-position: 6em;
     }
+    .botões__ancora:active {
+        background-color: var(--azul);
+        }
+}
+
+@media screen and (min-width: 1728px){
+    .banner__pesquisa{
+        width: 35%;
+    }
+
+    .banner__pesquisa::placeholder{
+        background-position: 9em;
+    }
+
+    .banner{
+        padding: 6em 0;
+    }
 }
