--- a/styles/header.css
+++ b/styles/header.css
@@ -20,6 +20,15 @@
     align-items: center;
 }
 
+.container__botao:checked ~ .container__rotulo > .cabeçalho__menu-hamburguer{
+    background-image: url(../img/Menu\ Aberto.svg);
+    
+}
+
+.container__botao:checked ~.container__rotulo{
+    background: var(--azul-degrade);
+}
+
 .container__imagem{
     padding: 1em;
 }
@@ -65,6 +74,11 @@
 .opções{
     display: none;
 }
+
+.container__texto{
+    display: none;
+}
+
 
 @media screen and (min-width: 1024px){
     .container__titulo , .container__titulo--negrito{
@@ -112,6 +126,47 @@
    .opções__botão{
     display: none;
    }
+
+   .opções__botão:checked ~.opções__rotulo > .opções__item{
+    background: var(--azul-degrade);
+    color: var(--branco);
+   }
+
+   .opções__item{
+    padding: 2em 1em;
+   }
+
+   .lista-menu__item:hover{
+    background: var(--azul-degrade);
+   }
+
+   .lista-menu__item:hover > .lista-menu__link{
+    -webkit-text-fill-color: var(--branco);
+    text-decoration: none;
+   }
+
+
+}
+
+@media screen and (min-width: 1728px){
+    .container__link{
+        display: flex;
+        align-items: center;
+        text-decoration: none;
+        color: var(--preto);
+    }
+
+    .cabeçalho{
+        padding: 0 2em;
+    }
+
+    .opções{
+        margin-right: auto;
+    }
+
+    .container__texto{
+        display: block;
+    }
 }
 
 
