--- a/styles/tópicos.css
+++ b/styles/tópicos.css
@@ -39,4 +39,19 @@
     .tópicos__link{
         font-size: 24px;
     }
+
+    .tópicos__item{
+        margin: 2.3em 0.5em;
+    }
+    .tópicos__link:hover {
+        color: var(--laranja);
+        background-color: var(--branco);
+        }
 }
+
+@media screen and (min-width: 1728px){
+
+    .tópicos{
+        padding: 3em 25vw;
+    }
+    }
